--- a/app/src/main/res/layout/activity_deconnection.xml
+++ b/app/src/main/res/layout/activity_deconnection.xml
@@ -5,14 +5,7 @@
     android:orientation="vertical"
     android:padding="10dip">
 
-    <!-- Name Label -->
-    <TextView
-        android:id="@+id/lblName"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:singleLine="true"
-        android:layout_marginTop="40dip"
-        android:layout_marginBottom="10dip"/>
+
 
     <!-- Email Label -->
     <TextView
@@ -20,7 +13,31 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:singleLine="true"
-        android:layout_marginBottom="40dip"/>
+        android:layout_marginBottom="40dip"
+
+
+        />
+    <ListView
+        android:id="@+id/listViewLivresUtilisateur"
+
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:visibility="visible"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:scrollbarAlwaysDrawVerticalTrack="true" android:fadingEdge="none"
+        android:dividerHeight="15px"
+        android:footerDividersEnabled="true"
+        >
+    </ListView>
+    <!-- Name Label
+    <TextView
+        android:id="@+id/lblName"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:singleLine="true"
+        android:layout_marginTop="40dip"
+        android:layout_marginBottom="10dip"/>-->
 
     <!-- Button to show session data -->
     <Button android:id="@+id/btnLogout"
