--- a/app/src/main/res/layout/activity_prevu.xml
+++ b/app/src/main/res/layout/activity_prevu.xml
@@ -1,130 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical"
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
     android:background="@drawable/prevu">
 
 
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
+ <!--       <ListView
+            android:id="@+id/listViewImageLivresPolulaires"
 
 
-        <ImageView
-            android:id="@+id/recherche"
-            android:src="@mipmap/ic_launcher_search"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="5dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginTop="50dp"
-            android:layout_weight="1"
-            android:adjustViewBounds="true"
-            android:padding="0dp"
-            android:scaleType="fitCenter"/>
-
-        <ImageView
-            android:id="@+id/scan"
-            android:src="@mipmap/ic_launcher_scan"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="50dp"
-            android:layout_marginTop="50dp"
-            android:layout_weight="1"
-            android:adjustViewBounds="true"
-            android:padding="0dp"
-            android:scaleType="fitCenter"/>
-        </LinearLayout>
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
-        <ImageView
-            android:id="@+id/viz"
-            android:src="@mipmap/ic_launcher_viz"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="50dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_weight="1"
-            android:adjustViewBounds="true"
-            android:padding="0dp"
-            android:scaleType="fitCenter"
-            />
-        <ImageView
-            android:id="@+id/compte"
-            android:src="@mipmap/ic_launcher_compte"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="50dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="50dp"
-            android:layout_marginTop="5dp"
-            android:layout_weight="1"
-            android:adjustViewBounds="true"
-            android:padding="0dp"
-            android:scaleType="fitCenter"
-
-            />
-
-
-
-
-        <!--<EditText
-            android:id="@+id/poids"
+            android:visibility="visible"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:scrollbarAlwaysDrawVerticalTrack="true" android:fadingEdge="none"
+            android:dividerHeight="15px"
+            android:footerDividersEnabled="false"
             android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:paddingTop="20dip"
+            android:paddingBottom="20dip"
+            android:background="#11000000"
+            android:layout_gravity="top"
+            android:fillViewport="true">
+        </ListView> -->
+
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="80dip" >
+        <LinearLayout
+            android:id="@+id/mygallery"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="Recherche"
-            android:inputType="numberDecimal"
-            android:layout_weight="1"
-            />-->
-
-
-    </LinearLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Plateforme de visualisation de prêts d'une bibliothèque universitaire"
-        android:textStyle="italic"
-        android:textColor="#00BFFF"
-        android:gravity="center"
-        android:textIsSelectable="true"
-        android:textAppearance="@style/GreenText"
-
-        />
-
-    <!--<LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
-        <ImageView
-            android:id="@+id/about"
-            android:src="@mipmap/ic_launcher_about"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="50dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="50dp"
-            android:layout_marginTop="5dp"
-            android:layout_weight="1"
-            android:adjustViewBounds="true"
-            android:padding="0dp"
-            android:scaleType="fitCenter"
+            android:orientation="horizontal"
             />
+    </HorizontalScrollView>
 
-    </LinearLayout>-->
+
+    <ImageView
+        android:id="@+id/scan"
+        android:src="@mipmap/ic_launcher_scan"
+        android:layout_width="fill_parent"
+        android:layout_height="300dip"
+        android:layout_marginTop="400dip"
+        android:layout_marginLeft="300dip"
+        android:layout_marginRight="0dip"
+        android:layout_gravity="bottom"
+        android:layout_weight="1"
+      />
+
+
 
 
 </LinearLayout>
