changement des appels web service

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -9,7 +9,7 @@
         android:id="@+id/descriptif"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#ffffff"
+        android:textColor="#febd17"
         android:textIsSelectable="true"
         android:textStyle="bold"
         android:textSize="25sp"
@@ -26,7 +26,7 @@
         android:id="@+id/aboutPrevu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#ffffff"
+        android:textColor="#febd17"
         android:textIsSelectable="true"
         android:textStyle="bold"
         android:text="@string/about"
