--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,8 +26,8 @@
 
  <!--   <style name="AppTheme" parent="android:Theme.Material.Light">
     </style> -->
-
-    <color name="white">#ffffff</color>
+    <color name="white">#fff</color>
+    <color name="yellow">#febd17</color>
     <style name="LightThemeSelector" parent="android:Theme.Holo.Light">
         <item name="android:actionBarStyle">@style/ActionBarTheme</item>
         <item name="android:windowBackground">@color/white</item>
